<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_header_toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="1dp"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:id="@+id/update_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                style="@style/Text.Brown"
                android:layout_centerVertical="true"
                android:text="@string/icon"/>

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/def_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/update_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                style="@style/Text.Brown"
                android:layout_centerVertical="true"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/uer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="38px"
                android:text="@string/user_name_detail" />

            <ImageView
                android:id="@+id/name_change"
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/update_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                style="@style/Text.Brown"
                android:layout_centerVertical="true"
                android:text="@string/user_word"/>

            <TextView
                android:id="@+id/user_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="38px"
                android:text="@string/user_word_detail" />

            <ImageView
                android:id="@+id/word_change"
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/right" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>